@@ -14,6 +14,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.net.Socket;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.util.ArrayList;
 import java.util.InputMismatchException;
@@ -177,7 +179,12 @@ public final class In {
 
             // or URL from web
             if (url == null) {
-                url = new URL(name);
+                //changed
+                try {url = new URI(name).toURL();} catch (IOException | URISyntaxException e) {
+                    throw new IllegalArgumentException("Could not open " + name, e);
+                }
+                
+
             }
 
             URLConnection site = url.openConnection();
